修改部分提示信息

--- a/fitlog/fastserver/templates/table.html
+++ b/fitlog/fastserver/templates/table.html
@@ -456,11 +456,11 @@ $table.on('refresh.bs.table', function () {
                 }
             },
             error: function(error){
-                bootbox.alert('Error encountered. ' + error);
+                bootbox.alert('Error encountered. If your server is running and you can connect to it, this may be a' +
+                    ' bug.');
             }
     })
 });
-
 
 </script>
 
