适配手机上的显示

--- a/fitlog/fastserver/templates/chart.html
+++ b/fitlog/fastserver/templates/chart.html
@@ -98,7 +98,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Enable to choose range</h4>
           </div>
-          <div class="modal-body" id="range_modal" style="height: 90px">
+          <div class="modal-body" id="range_modal">
 
           </div>
           <div class="modal-footer">
