前端增加一个关闭server的按钮

--- a/fitlog/fastserver/templates/table.html
+++ b/fitlog/fastserver/templates/table.html
@@ -511,8 +511,7 @@ $table.on('refresh.bs.table', function () {
                 }
             },
             error: function(error){
-                bootbox.alert('Error encountered. If your server is running and you can connect to it, this may be a' +
-                    ' bug.');
+                bootbox.alert('Error encountered. Check your connection to server.');
             }
     })
 });
