--- a/fitlog/fastserver/static/css/table.css
+++ b/fitlog/fastserver/static/css/table.css
@@ -13,6 +13,13 @@
     margin-bottom: 2px;
 }
 
+#add_row_dialogue div {
+	margin-top: 2px;
+    padding: 1px 0px 1px 10px;
+    margin-bottom: 2px;
+}
+
+
 
 /* 以下内容用于checkbox*/
 
