1.为了避免用户自定义的id存在重复，自动给每个id后面增加四位uuid; 2.修复chart_app中存在的bug

--- a/fitlog/fastserver/templates/table.html
+++ b/fitlog/fastserver/templates/table.html
@@ -341,7 +341,7 @@
            var input = inputs[index];
            if(input.value!==undefined && input.value!=='' ){
                if(input.id==='id'){
-                   row[input.id] = input.value.replace('/\s/g', '_');
+                   row[input.id] = input.value.replace('/\s/g', '_') + '_' + generate_uuid();
                }else{
                    row[input.id] = input.value;
                }
